// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Title debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Mocca coffee
  </span>
</div>
`;

exports[`Product Title debe de mostrar el componente correctamente con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom title
</span>
`;
